cabal-version:  2.2

name:           hw-mquery
version:        0.1.0.2
synopsis:       Monadic query DSL
description:    Please see README.md
category:       Data
homepage:       http://github.com/haskell-works/hw-mquery#readme
bug-reports:    https://github.com/haskell-works/hw-mquery/issues
author:         John Ky
maintainer:     newhoggy@gmail.com
copyright:      2018 John Ky
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-mquery

common base
  build-depends:
      base  >=4   &&  <5
    , ansi-wl-pprint
    , dlist
    , lens
  ghc-options: -Wall -O2 -msse4.2
  default-language: Haskell2010

library
  import: base
  hs-source-dirs:
      src

  exposed-modules:
      HaskellWorks.Data.AtLeastSize
      HaskellWorks.Data.Entry
      HaskellWorks.Data.Micro
      HaskellWorks.Data.Mini
      HaskellWorks.Data.MQuery
      HaskellWorks.Data.Row
      HaskellWorks.Data.Shows
      HaskellWorks.Data.ToBool
  other-modules:
      Paths_hw_mquery

executable hw-mquery-example
  import: base
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      hw-mquery
  other-modules:
      Paths_hw_mquery

test-suite hw-mquery-test
  import: base
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , hedgehog
    , hspec
    , hw-hspec-hedgehog
    , hw-mquery
  other-modules:
      HaskellWorks.Data.Model.Example
      HaskellWorks.Data.Model.Lens
      HaskellWorks.Data.Model.Type
      HaskellWorks.Data.MQuerySpec
      Paths_hw_mquery
